@@ -1,16 +1,14 @@
-/**
- * Created: 19.03.2020
- */
+// Created: 19.03.2020
 package de.freese.base.core.model.converter;
 
 import java.util.Collection;
 import java.util.List;
 import java.util.Objects;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 
 /**
  * @author Thomas Freese
+ *
  * @param <SOURCE> Typ der Quelle
  * @param <TARGET> Typ des Ziels
  */
@@ -20,7 +18,6 @@ public class Converter<SOURCE, TARGET>
     *
     */
     private final Function<SOURCE, TARGET> fromSource;
-
     /**
     *
     */
@@ -40,6 +37,7 @@ public class Converter<SOURCE, TARGET>
 
     /**
      * @param source Object
+     *
      * @return Object
      */
     public final TARGET convertFromSource(final SOURCE source)
@@ -49,15 +47,17 @@ public class Converter<SOURCE, TARGET>
 
     /**
      * @param target Object
+     *
      * @return {@link List}
      */
     public final List<SOURCE> convertFromTarget(final Collection<TARGET> target)
     {
-        return target.stream().map(this::convertFromTarget).collect(Collectors.toList());
+        return target.stream().map(this::convertFromTarget).toList();
     }
 
     /**
      * @param target Object
+     *
      * @return Object
      */
     public final SOURCE convertFromTarget(final TARGET target)
@@ -67,10 +67,11 @@ public class Converter<SOURCE, TARGET>
 
     /**
      * @param source Object
+     *
      * @return {@link List}
      */
     public final List<TARGET> createFromSource(final Collection<SOURCE> source)
     {
-        return source.stream().map(this::convertFromSource).collect(Collectors.toList());
+        return source.stream().map(this::convertFromSource).toList();
     }
 }
